# trash_mover

./: .gitignore  CMakeLists.txt  README.md
include/: Configuration.h  TrashData.h  TrashManager.h  UserDefinition.h
src/: TrashData.cpp  TrashManager.cpp  UserDefinition.cpp  main.cpp
